--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,23 +12,12 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
 
-    services:
-      docker:
-        image: docker:19.03.12
-        options: --privileged
-        ports:
-          - 5001:5001
-          - 5002:5001
-          - 5003:5001
-          - 5004:5001
-          - 8501:8501
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Updated to v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2  # Updated to v2
 
       - name: Login to DockerHub
         env:
@@ -42,19 +31,5 @@ jobs:
         run: |
           docker-compose up --build -d
           sleep 10  # Allow time for services to start
-          # Run tests here if you have a separate test script
+          # Add additional test commands here if necessary
           docker-compose down
-
-  deploy:
-    needs: build_and_test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Deploy to DockerHub
-        run: |
-          docker-compose down
-          docker-compose up -d
