--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,10 +14,13 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2  # Updated to v2
+        uses: docker/setup-buildx-action@v2
+
+      - name: Install Docker Compose
+        run: sudo apt-get install -y docker-compose  # Explicitly install docker-compose
 
       - name: Login to DockerHub
         env:
@@ -31,5 +34,5 @@ jobs:
         run: |
           docker-compose up --build -d
           sleep 10  # Allow time for services to start
-          # Add additional test commands here if necessary
+          # Run tests here if necessary
           docker-compose down
