--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Install Docker Compose
-        run: sudo apt-get install -y docker-compose  # Explicitly install docker-compose
+        run: sudo apt-get install -y docker-compose
 
       - name: Login to DockerHub
         env:
@@ -33,6 +33,9 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           docker-compose up --build -d
-          sleep 10  # Allow time for services to start
-          # Run tests here if necessary
+          docker-compose ps  # Check the status of each container
+          docker-compose logs  # Retrieve container logs to identify issues
+          sleep 10
+          # Add any test commands here if necessary
           docker-compose down
+
