--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          docker-compose up --build -d
+          docker-compose -p atomize up --build -d  # Set project name explicitly
           docker-compose ps
           docker-compose logs
           docker-compose down
