--- a/theme_service/Dockerfile
+++ b/theme_service/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY . /app
 
 # Copy .env file into the image
-COPY .env /app/.env
+#COPY .env /app/.env
 
 # Set environment variables directly in Docker
 ENV OPENAI_API_KEY=${OPENAI_API_KEY}
