--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,15 @@ jobs:
           docker-compose logs
           docker-compose down
 
+      # Cleanup Steps to Avoid Network Errors
       - name: Tear down Docker environment
-        run: docker-compose down
+        run: docker-compose -p atomize down
+
+      - name: Remove Docker Network
+        run: |
+          docker network rm atomize_default || true  # Ignore error if network doesn't exist
+
+      - name: Prune Docker System (optional)
+        run: docker system prune -f
 
 
