--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,13 +1,3 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -22,6 +12,12 @@ jobs:
       - name: Install Docker Compose
         run: sudo apt-get install -y docker-compose
 
+      - name: Initial Cleanup of Docker Environment
+        run: |
+          docker-compose -p atomize down || true
+          docker network prune -f || true
+          docker system prune -f || true  # Prunes unused resources
+
       - name: Login to DockerHub
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -32,20 +28,20 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          docker-compose -p atomize up --build -d  # Set project name explicitly
+          docker-compose -p atomize up --build -d
           docker-compose ps
           docker-compose logs
-          docker-compose down
 
-      # Cleanup Steps to Avoid Network Errors
+      # Final Cleanup Steps
       - name: Tear down Docker environment
-        run: docker-compose -p atomize down
-
-      - name: Remove Docker Network
         run: |
-          docker network rm atomize_default || true  # Ignore error if network doesn't exist
+          docker-compose -p atomize down
+          sleep 5  # Short delay to allow containers to stop cleanly
+
+      - name: Forcefully Remove Docker Network
+        run: |
+          docker network disconnect -f atomize_default $(docker ps -aq) || true
+          docker network rm atomize_default || true
 
       - name: Prune Docker System (optional)
         run: docker system prune -f
-
-
