--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,13 @@
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -45,3 +55,4 @@ jobs:
 
       - name: Prune Docker System (optional)
         run: docker system prune -f
+
